ChangeLog for pommed
--------------------

version 1.0:
	- Renamed to pommed in anticipation of the PowerBook support
	- Added fnmode setting
	- Added DBus support: signals and get methods

version 0.9:
	- Added preliminary audio support: increase and decrease PCM, mute and
	unmute both Headphone and Front
	- Allow disabling the initial backlight level setting

version 0.8:
	- wait for both light sensors to be under the threshold before
	lighting up the keyboard backlight; switch it off as soon as one
	of the sensors gets past the threshold.
	- added a configuration file
	- added optional Apple Remote control support

version 0.7:
	- allow MacBook users to switch off the LCD backlight entirely
	- fix model identifier string for the Core2 Duo MacBook